@@ -47,7 +47,7 @@ namespace Pandora_Wmi {
 	string        getOSVersion          ();
 	string        getOSBuild            ();
 	string        getSystemName         ();
-	void          getEventList              (string source, string type, string pattern, int interval, list<string> &event_list);
+	void          getEventList              (string source, string type, string code, string pattern, int interval, list<string> &event_list);
 	string        getTimestampLimit         (int interval);
 	void          convertWMIDate            (string wmi_date, SYSTEMTIME *system_time);
 };
